# chickencoop

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  coopmgr.startup.sh  coopserver paw.paw  sync.sh
Assets/: coopmgr.props.csv  coopmgr.props.json  helpfile.txt  valueschema.csv
For PAW users/: coopserver paw.paw
For PAW users/com.vmeng.PawExtensions.InsteonServerSig/: InsteonServerSig.js
chickencoop app/chickencoop/: AppDelegate.swift  AppPrefs.swift  BHButton.swift  CCServerManager.swift  CHtableHeaderView.swift  CHtableHeaderView.xib  ChickenCoop.swift  CoopValueHistoryController.swift  CoopValues.storyboard  CoopValuesController.swift  CoopView.storyboard  CoopViewController.swift  Crypto+Extensions.swift  Date+Extensions.swift  EditableUILabel.swift  Info.plist  InfoView.storyboard  InfoViewController.swift  MainViewController.swift  NSDate+RFC1123.swift  SPRadioButton.swift  SceneDelegate.swift  ScheduleDetailView.storyboard  ScheduleDetailViewController.swift  ScheduleTableHeaderView.swift  ScheduleTableHeaderView.xib  SchedulesView.storyboard  SchedulesViewController.swift  SelfSizedTableView.swift  SetupView.storyboard  SetupViewController.swift  UIAlertController+TextField.swift  UIButton+Extensions.swift  URLResponse+Extensions.swift  Utilities.swift  View+Activity.swift  View+Extensions.swift
chickencoop app/chickencoop.xcodeproj/: project.pbxproj
chickencoop app/chickencoop.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
chickencoop app/chickencoop/Assets.xcassets/AppIcon.appiconset/: Contents.json
chickencoop app/chickencoop/Assets.xcassets/Battery.imageset/: Contents.json
chickencoop app/chickencoop/Assets.xcassets/Battery_charge.imageset/: Contents.json
chickencoop app/chickencoop/Assets.xcassets/Eye_Closed.imageset/: Contents.json
chickencoop app/chickencoop/Assets.xcassets/Eye_Closed_Template.imageset/: Contents.json
chickencoop app/chickencoop/Assets.xcassets/Eye_Open.imageset/: Contents.json
chickencoop app/chickencoop/Assets.xcassets/Eye_Open_Template.imageset/: Contents.json
chickencoop app/chickencoop/Assets.xcassets/coop_tabbar.imageset/: Contents.json
chickencoop app/chickencoop/Base.lproj/: MainView.storyboard
coopServer/: main.cpp
coopserver/CoopMgr/: Action.cpp  Action.hpp  CPUInfo.cpp  CPUInfo.hpp  CoopDevices.cpp  CoopDevices.hpp  CoopMgr.cpp  CoopMgr.hpp  CoopMgrAPISecretMgr.cpp  CoopMgrAPISecretMgr.hpp  CoopMgrCommon.h  CoopMgrDB.cpp  CoopMgrDB.hpp  CoopMgrDevice.hpp  DoorMgr.cpp  DoorMgr.hpp  ErrorMgr.cpp  ErrorMgr.hpp  Event.cpp  Event.hpp  GPIO.cpp  GPIO.hpp  I2C.cpp  I2C.hpp  PiJuice.cpp  PiJuice.hpp  QwiicButton.cpp  QwiicButton.hpp  RPi_RelayHat.cpp  RPi_RelayHat.hpp  RelayHat.cpp  RelayHat.hpp  ScheduleMgr.cpp  ScheduleMgr.hpp  SolarTimeMgr.cpp  SolarTimeMgr.hpp  TMP102.cpp  TMP102.hpp  TempSensor.cpp  TempSensor.hpp  (+6 more)
coopserver/coopserver.xcodeproj/: project.pbxproj
coopserver/src/: CommonIncludes.hpp  ServerCmdValidators.hpp  ServerCommands.hpp  ServerCommandsLineFunctions.cpp  ServerNouns.cpp  main.cpp
for etc:init.d:/: README.md  coopmgr
